# TajwidCoach

./: .gitignore  IAP_TEST_CHECKLIST.md  README.md  firebase.json  firebase_setup_guide.md  fix_home.py  pubspec.yaml  response.json  response2.json  revenuecat_setup_guide.md  walkthrough.md
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  google-services.json
docs/: delete-account.html  privacy_policy.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase_options.dart  firebase_options_placeholder.dart  main.dart
lib/models/: ijazah_model.dart  last_read_model.dart  recording_model.dart  sheikh_model.dart  surah_model.dart  tajwid_rule_model.dart  user_model.dart
lib/providers/: auth_provider.dart  premium_provider.dart  quran_provider.dart  settings_provider.dart  sheikh_provider.dart  streak_provider.dart  tajwid_progress_provider.dart
lib/screens/: home_screen.dart  main_navigation.dart  splash_screen.dart
lib/services/: ad_service.dart  firebase_messaging_service.dart  mushaf_service.dart  (+12 more)
scratch/: test_streak_logic.dart
scripts/: download_tajwid_mushaf.py  fetch_full_quran_db.py  inspect_quran_db.py
server/: .gcloudignore  Dockerfile  PROD_DEPLOY.md  README.md  delete_account.html  main.py  models.py  privacy_policy.html  pyproject.toml  pyrightconfig.json  requirements.txt
server/scratch/: download_model.py  populate_sheikh_data.py  test_scoring.py  test_whisper.py  verify_fix.py  verify_models.py  verify_script.py
test/: auth_provider_test.dart  tajweed_engine_test.dart
(+35 files in other folders)
